# pygame-sandbox

./: README.md  example.py  platform_game.py  pyproject.toml
examples/: bounce-example.py  tutorial-game.py
examples/platformer/: platform_game.py
examples/platformer/lib/: __init__.py  platform.py  player.py
examples/racer/: main.py
examples/racer/lib/: __init__.py
examples/racer/lib/assets/: car.py
examples/racer/lib/stage/: racer_stage.py
