[tool.poetry]
name = "pygame-sandbox"
version = "0.1.0"
description = ""
authors = ["Jansen McEntee <jmcenteeiv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
